--- a/.workbench/Dockerfile
+++ b/.workbench/Dockerfile
@@ -3,3 +3,5 @@ FROM azul/zulu-openjdk:11.0.4
 RUN apt-get update && \
     apt-get install -y sudo bash && \
     rm -rf /var/lib/apt/lists/*
+
+ADD entrypoint-interactive.sh /usr/bin
