Introduce PostGIS extension

--- a/test-postgres/build.gradle
+++ b/test-postgres/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
     testImplementation project(":core")
     testImplementation project(":test-base")
+    testImplementation project(":postgis")
+    testImplementation libJUnit
     testRuntime libTestcontainersPostgres
     testRuntime libPostgresJdbc
     testRuntime libLogback
